# paso-chan

./: CMakeLists.txt  README.md  timelog.tbl  timelog.tbl.save
kicad/: #auto_saved_files#  _autosave-peripherals.kicad_sch  bms.kicad_sch  kicad.kicad_pro  kicad.kicad_sch  microcontroller.kicad_sch  peripherals.kicad_sch  ~kicad.kicad_sch.lck
networking/: relay_server.py
networking/paso_chan1_arduino/: paso_chan1_arduino.ino
networking/paso_chan2_arduino/: paso_chan2_arduino.ino
paso-chan-app/: connection.html  index.html  style.css  styleConnection.css
src/: CMakeLists.txt  main.cpp  network_api.c  network_api.h  network_test.c  pasochan.cpp  pasochan.h  ssd1306_display.c  ssd1306_display.h
